# dejafoo

./: .gitignore  404.html  AGENTS.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CODESBUILD.md  Dockerfile.lambda  README.md  SETUP_PRIVATE_DEPLOYMENT.md  TESTING.md  build.sh  buildspec.yml  deploy-code.sh  deploy.sh  env.example  index.html  index.js  local-test.js  mkdocs.yml  package-lock.json  package.json  requirements.txt  response.json  test-cache-hit-miss.js  test-production.js  test-quick.js  test_cache_expiration.sh
.github/workflows/: docs.yml
api-reference/: index.html
api-reference/endpoints/: index.html
config/: allowlist.yaml  env.sample  policies.yaml
deployment/: index.html
development/: index.html
docs/: README.md  index.md  package.json  serve.sh
docs/api-reference/: endpoints.md  index.md
docs/deployment/: index.md
docs/development/: index.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/reference/: environment-variables.md  terraform-modules.md
docs/user-guide/: index.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
infra/: core.tf  dns.tf  dns.tfvars  main.tf  phase1.sh  phase2.sh  placeholder-lambda.js  secrets.tfvars.example  terraform.tfvars  terraform.tfvars.example
infra/phase1/: core.tf  terraform.tfvars
infra/phase2/: dns.tf  (+1 more)
scripts/: deploy.sh  load_test.py  local_proxy.sh  setup-infrastructure.sh  setup.sh  test.sh  test_curl.sh  test_jsonplaceholder.sh  troubleshoot-terraform.sh
search/: search_index.json
site/: 404.html  index.html  package.json  sitemap.xml
src/: handler.rs  index.js  lib.rs  main.rs
tests/: debug-cache-keys.js  test-headers.js  test-production.js  test-ttl-updates.js  test_config.yaml
user-guide/: index.html
(+49 files in other folders)
