[package]
name = "dejafoo"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance HTTP proxy with intelligent caching built with Rust"
license = "MIT"
repository = "https://github.com/yourusername/dejafoo"
keywords = ["proxy", "cache", "http", "aws", "lambda"]
categories = ["web-programming", "network-programming"]

[dependencies]
# AWS SDK
aws-config = "1.1.0"
aws-sdk-dynamodb = "1.20.0"
aws-sdk-s3 = "1.20.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Lambda runtime
lambda_runtime = "0.8"

# Logging
log = "0.4"
env_logger = { version = "0.10", optional = true }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"

# URL parsing
url = "2.4"

# Regex
regex = "1.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Configuration
config = "0.14"
dotenv = "0.15"

# Testing
[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.8"

# Benchmarking
[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

# Binary targets
[[bin]]
name = "dejafoo-proxy"
path = "src/main.rs"

[[bin]]
name = "dejafoo-lambda"
path = "src/handler.rs"

# Features
[features]
default = ["lambda"]
lambda = []
local = []
dev = ["local", "env_logger"]

# Build configuration
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

# Documentation
[package.metadata.docs.rs]
features = ["dev"]
targets = ["x86_64-unknown-linux-gnu"]
